--- a/ios/RNAssigment/Info.plist
+++ b/ios/RNAssigment/Info.plist
@@ -84,6 +84,7 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Billabong-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
