--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "0.36.2",
     "react-native-localization": "^2.1.6",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-responsive-screen": "^1.4.1",
